--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -52,7 +52,7 @@ $primary-color: #ed7123;
 }
 
 .navbar-default {
-    .navbar-toggle {
+    .main-toggle {
         &:hover,
         &:focus {
             background-color: $primary-color;
